Sync with 26.2
fix: PacketSplitter to do better.
fix: a few items in the Data Tag system.
network protocol overhaul: All protocols now require explicit registration by the Client.
Introduce Compressed Data Tag Packets.  This saves a ton of Buffer space & bandwidth.
- Hard network backwards compat breakage.
- Sync Litematica backend changes with Litematica (Data Tags, etc)

Some Task Manager work & protocol fixes

Translated using Weblate (Literary Chinese)

Currently translated at 33.9% (55 of 162 strings)

Translated using Weblate (Chinese (Simplified Han script))

Currently translated at 91.3% (148 of 162 strings)

Co-authored-by: Prefill add-on <noreply-addon-prefill@weblate.org>
Translate-URL: https://translate.sakuraryoko.com/projects/servux/main/lzh/
Translate-URL: https://translate.sakuraryoko.com/projects/servux/main/zh_Hans/
Translation: Servux/26.2

Translated using Weblate (Chinese (Simplified Han script))

Currently translated at 100.0% (162 of 162 strings)

Co-authored-by: 金合欢酱 <1426540823@qq.com>
Translate-URL: https://translate.sakuraryoko.com/projects/servux/main/zh_Hans/
Translation: Servux/26.2

fix: §c position in single key

fix: ensure working & speed up Task performance.
add: Sponge / Vanilla NBT reading fixes from Litematica